block unlocked added

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,20 @@
-/* reset */
 *,
 *::before,
 *::after {
-  margin: 1px;
-  padding: 1px;
-  box-sizing: border-box;
+    margin: 1px;
+    padding: 1px;
+    box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-
-  min-height: 100vh;
-  padding: 20px;
-
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 100vh;
+    padding: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: rgb(255, 255, 255);
 }
 
 h1 {
@@ -26,118 +23,59 @@ h1 {
     display: block;
 }
 
-/* block-$ */
 .block-effect {
-  font-size: calc(8px + 6vw);
+    font-size: calc(8px + 6vw);
 }
 
 .block-reveal {
-  --t: calc(var(--td) + var(--d));
-
-  color: transparent;
-  padding: 4px;
-
-  position: relative;
-  overflow: hidden;
-
-  animation: revealBlock 0s var(--t) forwards;
+    --t: calc(var(--td) + var(--d));
+    color: transparent;
+    padding: 4px;
+    position: relative;
+    overflow: hidden;
+    animation: revealBlock 0s var(--t) forwards;
 }
 
 .block-reveal::after {
-  content: '';
-
-  width: 0%;
-  height: 100%;
-  padding-bottom: 4px;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  background: var(--bc);
-  animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
-}
-
-
-/* animations */
-@keyframes revealBlock {
-  100% {
-    color: #000000;
-  }
-}
-
-@keyframes revealingIn {
-
-  0% {
-    width: 0;
-  }
-
-  100% {
-    width: 100%;
-  }
-}
-
-@keyframes revealingOut {
-
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(100%);
-  }
-
-}
-
-@keyframes fadeIn {
-  from {
-      opacity: 0;
-  }
-  to {
-      opacity: 1;
-  }
+    content: '';
+    width: 0%;
+    height: 100%;
+    padding-bottom: 4px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: var(--bc);
+    animation: revealingIn var(--td) var(--d) forwards, revealingOut var(--td) var(--t) forwards;
 }
 
 .fade-in {
-  animation: fadeIn 3s forwards;
-  animation-delay: 2.5s;
-  opacity: 0;
-  font-size: calc(8px + 2vw);
-  color: #a0a0a0;
-  text-align: center;
-  margin-top: 100px;
+    animation: fadeIn 3s forwards;
+    animation-delay: 2.5s;
+    opacity: 0;
+    font-size: calc(8px + 2vw);
+    color: #a0a0a0;
+    text-align: center;
+    margin-top: 100px;
 }
 
 .view {
-width: 100%;
-display: flex;
-align-items: center;
-flex-wrap: wrap;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .block { 
-height: 200px;
-width: 100%;
-margin: 5vw 0vh;
-border-radius: 10px;
-box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    height: 200px;
+    width: 100%;
+    margin: 5vw 0vh;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-position: relative;
-display: flex;
-align-items: flex-start;
-padding: 10px;
-}
-
-@media (min-width: 768px) {
-  .block {
-    margin: 5vw 7vh;
-    border-radius: 25px;
-  }
-
-  h1 {
-    font-size: calc(8px + 3vw);
-  }
+    position: relative;
+    display: flex;
+    padding: 15px;
 }
 
 input[type="checkbox"] {
@@ -155,34 +93,103 @@ input[type="checkbox"] {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 4vh;
-    color: gray;
+    color: rgb(127, 24, 179);
     display: none;
 }
 
+.block .unlocked {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 6vh;
+    color: rgb(56, 149, 220);
+    display: none;
+}
+
+@keyframes revealBlock {
+
+    100% {
+    color: #000000;
+    }
+}
+
+@keyframes revealingIn {
+
+    0% {
+    width: 0;
+    }
+
+    100% {
+    width: 100%;
+    }
+}
+
+@keyframes revealingOut {
+
+    0% {
+    transform: translateX(0);
+    }
+
+    100% {
+    transform: translateX(100%);
+    }
+
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes showUnlock {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@media (min-width: 768px) {
+    .block {
+        margin: 5vw 7vh;
+        border-radius: 25px;
+    }
+    
+    h1 {
+        font-size: calc(8px + 3vw);
+    }
+}
+
 #block1 .content {
-  display: block;
+    display: block;
 }
 
 #block2 .locked, #block3 .locked {
-  display: block;
+    display: block;
 }
 
 .block:nth-child(1) {
-  background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
 .block:nth-child(2) {
-  background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
 .block:nth-child(3) {
-  background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
 .block:nth-child(4) {
-  background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
 .block:nth-child(5) {
-  background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
 .block:nth-child(6) {
-  background: rgb(255, 255, 255);
+    background: rgb(255, 255, 255);
 }
   
