--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@ h1 {
 }
 
 .block { 
-    height: 200px;
+    background: rgb(255, 255, 255);
+    min-height: 200px;
     width: 100%;
     margin: 5vw 0vh;
     border-radius: 10px;
@@ -76,6 +77,7 @@ h1 {
     position: relative;
     display: flex;
     padding: 15px;
+    align-items: center;
 }
 
 input[type="checkbox"] {
@@ -84,7 +86,6 @@ input[type="checkbox"] {
 
 .content {
     display: none;
-    width: 100;
 }
 
 .block .locked {
@@ -105,6 +106,33 @@ input[type="checkbox"] {
     font-size: 6vh;
     color: rgb(56, 149, 220);
     display: none;
+}
+
+.block-in {
+    max-width: 180px;
+    background: #efefef;
+    border-radius: 15px;
+    display: flex;
+    margin-top: 20px;
+    margin: 20px auto 0;
+    padding: 10px;
+}
+
+#name {
+    width: 100px;
+}
+
+.button-container {
+    text-align: center;
+}
+
+.btn {
+    position: relative;
+    border: none;
+    display: inline-block;
+    padding: 12px 30px;
+    border-radius: 15px;
+    background: #ffffff;
 }
 
 @keyframes revealBlock {
@@ -170,26 +198,6 @@ input[type="checkbox"] {
     display: block;
 }
 
-#block2 .locked, #block3 .locked {
+.view .block .locked {
     display: block;
 }
-
-.block:nth-child(1) {
-    background: rgb(255, 255, 255);
-}
-.block:nth-child(2) {
-    background: rgb(255, 255, 255);
-}
-.block:nth-child(3) {
-    background: rgb(255, 255, 255);
-}
-.block:nth-child(4) {
-    background: rgb(255, 255, 255);
-}
-.block:nth-child(5) {
-    background: rgb(255, 255, 255);
-}
-.block:nth-child(6) {
-    background: rgb(255, 255, 255);
-}
-  
