--- a/styles.css
+++ b/styles.css
@@ -109,13 +109,19 @@ input[type="checkbox"] {
     display: none;
 }
 
+.block-in-container {
+    text-align: center;
+}
+
 .block-in {
-    max-width: 180px;
-    background: #efefef;
+    display: inline-block;
+    width: auto;
+    background: #f5f5f5;
     border-radius: 15px;
-    display: flex;
     margin: 20px auto 0;
     padding: 10px;
+    font-weight: 600;
+
 }
 
 #name {
@@ -125,15 +131,28 @@ input[type="checkbox"] {
 .button-container {
     margin-top: 10px;
     text-align: center;
+    font-weight: 600;
 }
 
 .btn {
     position: relative;
     border: none;
     display: inline-block;
-    padding: 12px 30px;
+    padding: 8px 16px;
     border-radius: 15px;
     background: #ffffff;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.numbox {
+    width: 20px;
+}
+
+a:link {
+    color: #2b84d2;
+    text-decoration: none;
+    margin: 15px;
 }
 
 @keyframes revealBlock {
