--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ a:visited {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(68, 68, 68, 0.8);
+    background-color: rgba(0, 0, 0, 0.7);
     color: #ffffff;
     font-size: 13px;
     font-weight: 600;
@@ -191,6 +191,7 @@ a:visited {
     border-radius: 8px;
     z-index: 1000;
     width: 80%;
+    text-align: center;
 }
 
 .popup-image {
@@ -200,8 +201,8 @@ a:visited {
 
 .close {
     position: absolute;
-    top: 0px;
-    right: 5px;
+    top: -8px;
+    right: 2px;
     font-size: 24px;
     font-weight: bold;
     color: #fff;
